--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shreyas-rc",
-  "homepage": "https://shreyas-rc.github.io/shreyas-rc",
+  "homepage": "/shreyas-rc",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
